@@ -30,16 +30,22 @@
   <target name="prepare" depends="init">
     <mkdir dir="${build}"/>
     <mkdir dir="${build}/classes"/>
+    <mkdir dir="${build}/testclasses"/>
     <mkdir dir="${build}/src"/>
+    <mkdir dir="${build}/testsrc"/>
+    <mkdir dir="${build}/testrep"/>
 
     <copy todir="${build}/src">
       <fileset dir="${src}/main" includes="**/*.java"/>
     </copy>
-    <copy todir="${build}/src">
+    <copy todir="${build}/testsrc">
       <fileset dir="${src}/test" includes="**/*.java"/>
     </copy>
     <copy todir="${build}/classes">
       <fileset dir="${src}/main" includes="**/*.properties"/>
+    </copy>
+    <copy todir="${build}/testclasses">
+      <fileset dir="${src}/test" includes="**/*.properties"/>
     </copy>
   </target>
 
@@ -47,9 +53,13 @@
     <javac destdir="${build}/classes" srcdir="${build}/src" classpathref="libs" debug="${javac.debug}" optimize="${javac.optimize}" encoding="latin1"/>
   </target>
 
+    <target name="compile-test" depends="init,prepare,compile">
+    <javac destdir="${build}/testclasses" srcdir="${build}/testsrc" classpathref="libs" classpath="${build}/classes" debug="${javac.debug}" optimize="${javac.optimize}" encoding="latin1"/>
+  </target>
+
   <target name="javadoc" depends="prepare">
     <mkdir dir="${build}/doc"/>
-    <javadoc sourcepath="${build}/src" destdir="${build}/doc" packagenames="net.sourceforge.jtds.*" Author="true"
+    <javadoc sourcepath="${build}/src;${build}/testsrc" destdir="${build}/doc" packagenames="net.sourceforge.jtds.*" Author="true"
              Doctitle="jTDS API Documentation" Use="true" Version="true" bottom="Generated on ${TODAY}"
              Windowtitle="jTDS API" Private="true" classpathref="libs" encoding="latin1">
       <tag name="todo" description="To do:"/>
@@ -57,17 +67,18 @@
     </javadoc>
   </target>
 
-  <target name="test" depends="compile">
+  <target name="test" depends="compile,compile-test">
     <taskdef name="junit" classname="org.apache.tools.ant.taskdefs.optional.junit.JUnitTask"/>
 
     <junit fork="no" haltonfailure="no" printsummary="yes">
       <classpath>
         <pathelement location="build/classes"/>
+        <pathelement location="build/testclasses"/>
         <path refid="libs"/>
       </classpath>
       <formatter type="plain"/>
-      <batchtest>
-        <fileset dir="${build}/src">
+      <batchtest todir="${build}/testrep" >
+        <fileset dir="${build}/testsrc">
           <include name="**/*Test.java"/>
           <exclude name="**/AllTests.java"/>
         </fileset>
@@ -97,10 +108,10 @@
     </jar>
 
     <!-- Source package -->
+    <mkdir dir="${dist}/tmp"/>
     <copy todir="${dist}/tmp/doc">
       <fileset dir="${build}/doc" includes="**/*"/>
     </copy>
-    <mkdir dir="${dist}/tmp"/>
     <copy todir="${dist}/tmp">
       <fileset dir="." includes="README,README.SSL,README.XA,README.SSO,CHANGELOG,LICENSE,*.bat,*.sh,*.xml,src/**/*,lib/**/*,html/**/*,conf/**/*.xml,conf/**/*.tmpl"/>
     </copy>
